--- a/starter-code/views/signup.ejs
+++ b/starter-code/views/signup.ejs
@@ -10,4 +10,12 @@
     placeholder="Your password">
   <br><br>
   <button>Create account</button>
+
+  <% if (typeof(errorMessage) !== "undefined") { %>
+  <div class="error-message"><%= errorMessage %></div>
+<% } %>
+<% if (typeof(successMessage) !== "undefined") { %>
+  <div class="error-message"><%= successMessage %></div>
+<% } %>
+
 </form>
