--- a/starter-code/views/signup.ejs
+++ b/starter-code/views/signup.ejs
@@ -1,6 +1,5 @@
 <h2>Signup</h2>
-
-<form action="/signup" method="POST" id="form-container">
+<form action="/auth/signup" method="POST" id="form-container">
   <label for="username">Username</label>
   <input type="text" name="username"
     placeholder="JonSnow">
@@ -12,10 +11,12 @@
   <button>Create account</button>
 
   <% if (typeof(errorMessage) !== "undefined") { %>
-  <div class="error-message"><%= errorMessage %></div>
-<% } %>
-<% if (typeof(successMessage) !== "undefined") { %>
-  <div class="error-message"><%= successMessage %></div>
-<% } %>
+    <div class="error-message"><%= errorMessage %></div>
+  <% } %>
+  <% if (typeof(successMessage) !== "undefined") { %>
+    <div class="error-message"><%= successMessage %></div>
+  <% } %>
 
 </form>
+<div><a href="/">Go homepage</a>
+</div>
